Fixed the issues with the project visibility, the activities form now displays the data to edit, added some titles to make clearer the difference between projects and activities

--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,7 @@
   text-align: center;
   flex-direction: column;
   padding-top: 15px;
+  border: solid 1px blue;
 }
 
 .projectMainContainer {
@@ -71,4 +72,17 @@
   width: 25%;
   display: flex;
   flex-direction: column;
+}
+
+.projectBigTitle {
+  font-size: 30px;
+  color: red;
+  margin-bottom: 15px;
+}
+
+.activityBigTitle {
+  font-size: 25px;
+  color: red;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
